[gd_scene load_steps=41 format=3 uid="uid://dqb8n2mi33a6g"]

[ext_resource type="Script" uid="uid://lrxxhn3cichk" path="res://Scripts/snail_enemy.gd" id="1_8vo2a"]
[ext_resource type="Texture2D" uid="uid://m4gnjapc55ol" path="res://Assets/Snail/Hit (38x24).png" id="1_bq3ph"]
[ext_resource type="Texture2D" uid="uid://cmv1hj12ccvvn" path="res://Assets/Snail/Walk (38x24).png" id="1_f7nxb"]
[ext_resource type="Texture2D" uid="uid://bn5n8isve7jtf" path="res://Assets/Snail/Idle (38x24).png" id="2_vk7k6"]
[ext_resource type="PackedScene" uid="uid://d37vkk72w43ie" path="res://Scenes/hitbox.tscn" id="5_x2jkh"]
[ext_resource type="PackedScene" uid="uid://bko0phuj3etyn" path="res://Scenes/hurtbox.tscn" id="6_bfckw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4p4gk"]
atlas = ExtResource("1_bq3ph")
region = Rect2(0, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1umlh"]
atlas = ExtResource("1_bq3ph")
region = Rect2(38, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb7s3"]
atlas = ExtResource("1_bq3ph")
region = Rect2(76, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuq15"]
atlas = ExtResource("1_bq3ph")
region = Rect2(114, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1r62"]
atlas = ExtResource("1_bq3ph")
region = Rect2(152, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gykuv"]
atlas = ExtResource("2_vk7k6")
region = Rect2(0, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq3ph"]
atlas = ExtResource("2_vk7k6")
region = Rect2(38, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk7k6"]
atlas = ExtResource("2_vk7k6")
region = Rect2(76, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xktgc"]
atlas = ExtResource("2_vk7k6")
region = Rect2(114, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uguej"]
atlas = ExtResource("2_vk7k6")
region = Rect2(152, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vo2a"]
atlas = ExtResource("2_vk7k6")
region = Rect2(190, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2jkh"]
atlas = ExtResource("2_vk7k6")
region = Rect2(228, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfckw"]
atlas = ExtResource("2_vk7k6")
region = Rect2(266, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pucd4"]
atlas = ExtResource("2_vk7k6")
region = Rect2(304, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3js7"]
atlas = ExtResource("2_vk7k6")
region = Rect2(342, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_63usq"]
atlas = ExtResource("2_vk7k6")
region = Rect2(380, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc6ux"]
atlas = ExtResource("2_vk7k6")
region = Rect2(418, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql0xr"]
atlas = ExtResource("2_vk7k6")
region = Rect2(456, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiod3"]
atlas = ExtResource("2_vk7k6")
region = Rect2(494, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdwrg"]
atlas = ExtResource("2_vk7k6")
region = Rect2(532, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cslr7"]
atlas = ExtResource("1_f7nxb")
region = Rect2(0, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr75e"]
atlas = ExtResource("1_f7nxb")
region = Rect2(38, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlt3o"]
atlas = ExtResource("1_f7nxb")
region = Rect2(76, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_px7cs"]
atlas = ExtResource("1_f7nxb")
region = Rect2(114, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ld4ee"]
atlas = ExtResource("1_f7nxb")
region = Rect2(152, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksnhd"]
atlas = ExtResource("1_f7nxb")
region = Rect2(190, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqkr5"]
atlas = ExtResource("1_f7nxb")
region = Rect2(228, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kivgk"]
atlas = ExtResource("1_f7nxb")
region = Rect2(266, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nfpo"]
atlas = ExtResource("1_f7nxb")
region = Rect2(304, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcrak"]
atlas = ExtResource("1_f7nxb")
region = Rect2(342, 0, 38, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_4p4gk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p4gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1umlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb7s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuq15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1r62")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gykuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq3ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk7k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xktgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uguej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vo2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2jkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfckw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pucd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3js7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63usq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc6ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql0xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiod3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdwrg")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cslr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr75e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlt3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_px7cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld4ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksnhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqkr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kivgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nfpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcrak")
}],
"loop": true,
"name": &"walk",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2jkh"]
size = Vector2(8, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfckw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pucd4"]
size = Vector2(13.3333, 3.33333)

[node name="Snail Enemy" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_4p4gk")
animation = &"idle"
autoplay = "walk"
script = ExtResource("1_8vo2a")

[node name="LeftWallCast" type="RayCast2D" parent="."]
target_position = Vector2(-24, 0)

[node name="RightWallCast" type="RayCast2D" parent="."]
rotation = 3.14159
enabled = false
target_position = Vector2(-24, 0)

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource("5_x2jkh")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-14, 4)
shape = SubResource("RectangleShape2D_x2jkh")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(5, 0.667)
shape = SubResource("RectangleShape2D_bfckw")

[node name="Hurtbox" parent="." instance=ExtResource("6_bfckw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(6.66667, -11.6667)
shape = SubResource("RectangleShape2D_pucd4")

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
